# discord-rpc

./: CMakeLists.txt
include/: discord_rpc.h
src/: CMakeLists.txt  serialization.cpp
